Restore `Stream#toList()` by adding explicit type arguments for Eclipse